--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
     width: 20px; /* Adjust the width and height as needed */
     height: 20px;
     border-radius: 50%;
-    background-color: #000000; /* Choose your desired background color */
+    background-color: #835797; /* Choose your desired background color */
     color: #fff; /* Choose your desired text color */
     font-size: 12px; /* Choose your desired font size */
     font-weight: bold;
@@ -22,4 +22,14 @@
 
 .checkbox-container {
     margin-left: auto;
+}
+
+.background-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #d2d2d2;
+    z-index: -1;
 }
