--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 20px; /* Adjust the width and height as needed */
+    width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #835797; /* Choose your desired background color */
-    color: #fff; /* Choose your desired text color */
-    font-size: 12px; /* Choose your desired font size */
+    background-color: #835797;
+    color: #fff;
+    font-size: 12px; 
     font-weight: bold;
 }
 
@@ -22,14 +22,4 @@
 
 .checkbox-container {
     margin-left: auto;
-}
-
-.background-layer {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #d2d2d2;
-    z-index: -1;
 }
