--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #835797;
+    background-color: #8EAFCE;
     color: #fff;
     font-size: 12px; 
     font-weight: bold;
@@ -13,13 +13,4 @@
 
 .hidden {
     opacity: 0;
-}
-
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-.checkbox-container {
-    margin-left: auto;
 }
